--- a/app/views/badges/show.html.haml
+++ b/app/views/badges/show.html.haml
@@ -23,9 +23,9 @@
             = label_tag :search, 'Search', class: 'search-form-label'
             = text_field_tag :search, params[:search],
               class: 'search-form-control'
-            = label_tag :sort, 'Sort by:', class: 'search-form-label'
-            = text_field_tag :sort, params[:search],
-              class: 'search-form-control'
+            -#= label_tag :sort, 'Sort by:', class: 'search-form-label'
+            -#= text_field_tag :sort, params[:search],
+              -#class: 'search-form-control'
           %p.search-proposals
             = link_to 'Nominate someone', '#',
               class: 'search-proposals-nominate'
@@ -40,34 +40,35 @@
     %aside.span3.badge-sidebar
       = render partial: 'badge', collection: @badges
   .col-md-9
-    .span9.badge-presenter
-      .row
-        .col-md-12
-          .badge-presenter-image
-            = image_tag @badge.image_url, { class: unknown_image?(@badge) }
-            = render_partial?(@badge.users, 'earned')
-          .badge-presenter-info
-            %h1.badge-presenter-title= @badge.name
-            %strong Description:
-            %p= @badge.description
-            %hr.badge-presenter-separator
-            %strong Values:
-            %p= show_value(@badge.value)
-            %hr.badge-presenter-separator
-            %strong Path:
-            = render_partial?(@badge.users, 'social_media')
-    .span9.badge-winners
-      %header.badge-winners-header
-        %h3.badge-winners-title Who else has it?
-        %p.badge-winners-description
-          = pluralize(@badge.users.count, 'Crowdie')
-          have earn this badge
-      %section.badge-winners-users
-        - @badge.users.each do |user|
-          .badge-winners-user
-            = image_tag user.picture_url, size: '100x100',
-              class: 'badge-winners-user-image'
-            %strong.badge-winners-user-name= user.name
+    - cache do
+      .span9.badge-presenter
+        .row
+          .col-md-12
+            .badge-presenter-image
+              = image_tag @badge.image_url, { class: unknown_image?(@badge) }
+              = render_partial?(@badge.users, 'earned')
+            .badge-presenter-info
+              %h1.badge-presenter-title= @badge.name
+              %strong Description:
+              %p= @badge.description
+              %hr.badge-presenter-separator
+              %strong Values:
+              %p= show_value(@badge.value)
+              %hr.badge-presenter-separator
+              %strong Path:
+              = render_partial?(@badge.users, 'social_media')
+      .span9.badge-winners
+        %header.badge-winners-header
+          %h3.badge-winners-title Who else has it?
+          %p.badge-winners-description
+            = pluralize(@badge.users.count, 'Crowdie')
+            have earn this badge
+        %section.badge-winners-users
+          - @badge.users.each do |user|
+            .badge-winners-user
+              = image_tag user.picture_url, size: '100x100',
+                class: 'badge-winners-user-image'
+              %strong.badge-winners-user-name= user.name
 .row
   .col-md-12
     %footer.badges-footer-badge
