--- a/app/views/shared/_user.html.haml
+++ b/app/views/shared/_user.html.haml
@@ -1,12 +1,13 @@
-%tr
-  %td
-    = image_tag user.picture_url
-    = link_to user_path(user) do
-      = user.name
-  %td= user.position
-  %td
-    = link_to 'Edit', edit_user_path(user), class: 'action-control-section'
-    |
-    = link_to 'Delete', user_path(user), method: :delete,
-                                         confirm: "Are you sure?",
-                                         class: 'action-control-section'
+- cache do
+  %tr
+    %td
+      = image_tag user.picture_url
+      = link_to user_path(user) do
+        = user.name
+    %td= user.position
+    %td
+      = link_to 'Edit', edit_user_path(user), class: 'action-control-section'
+      |
+      = link_to 'Delete', user_path(user), method: :delete,
+                                           confirm: "Are you sure?",
+                                           class: 'action-control-section'
