Add workshop styles

--- a/app/assets/stylesheets/modules/admin.sass
+++ b/app/assets/stylesheets/modules/admin.sass
@@ -123,6 +123,8 @@
       padding: 7px 20px
       position: relative
       text-align: center
+    .workshop
+      left: 0px
   table
     tbody > tr > th
       background: $gray-lighter
