--- a/app/assets/stylesheets/modules/workshops.sass
+++ b/app/assets/stylesheets/modules/workshops.sass
@@ -1,13 +1,19 @@
-= badges_links($color)
+= workshops_links($color)
   color: $color
   font-size: 1em
   font-weight: 400
 
-.badges
+.module-separation
+  margin-bottom: 20px
+
+.workshops-table-headers
+  margin-top: -1px
+
+.workshops
   background-color: $white
   position: initial
 
-.badges-header
+.workshop-header
   color: #aa392d
   display: inline-block
   font-family: 'Roboto'
@@ -15,30 +21,31 @@
   font-weight: 400
   margin: 15px
 
-.badges-header-container
+.workshops-header-container
   border-bottom: 1px solid $pink-50
   position: relative
 
-.badges-header-decorator
-  background: image_url('sprite-badges.png') -25px -805px no-repeat
+.workshops-header-decorator
+  background: image_url('sprite-badges.png') -105px -805px no-repeat
   height: 45px
   position: absolute
   top: 15px
   right: -9px
   width: 25px
 
-.badges-header-image
-  background: image_url('sprite-badges.png') -27px -585px no-repeat
+.workshop-header-image
+  background: image_url('sprite-badges.png') -96px -517px 
+  no-repeat
   display: inline-block
   height: 50px
   width: 50px
 
-.badges-title
+.workshops-title
   padding: 15px
   vertical-align: 16px
   font-size: 1em
 
-.badges-menu
+.workshops-menu
   float: right
   margin: 30px
   li
@@ -49,21 +56,17 @@
       border: none
       padding-right: 0px
 
-.badges-last-link
-  +badges_links($yellow)
+.workshop-last-link
+  +workshops_links($blue-light)
 
-.badges-first-link
-  +badges_links($orange-dark)
-
-.badges-all
+.workshop-all
   border-top: 1px solid $white
   overflow: auto
 
-.badges-default-message
+.workshop-default-message
   margin-left: 14px
 
-.badges-footer
-  background: image_url('sprite-badges.png') -15px -650px no-repeat
+.workshops-footer
   border-top: 1px solid $pink-50
   color: $gray-light
   font-size: 0.9em
@@ -71,26 +74,21 @@
   position: relative
   text-align: center
 
-.badges-footer-badge
-  @extend .badges-footer
+.workshops-footer-workshop
+  @extend .workshops-footer
   background-color: $white
   margin-bottom: 15px
   padding: 25px
 
-.badges-footer-separator
-  @extend .badges-footer
+.workshops-footer-separator
+  @extend .workshops-footer
   margin-bottom: 30px
 
-.badges-footer-icon
-  background: image_url('sprite-badges.png') -29px -720px no-repeat
+.workshops-footer-icon
+  background: image_url('sprite-badges.png') -149px -720px no-repeat
   display: inline-block
   position: absolute
   width: 55px
   height: 60px
   top: -4px
   right: -9px
-
-.badges-count
-  color: $gray-light
-  margin-left: -25px
-  vertical-align: 17px
