--- a/app/views/shared/_actions.html.haml
+++ b/app/views/shared/_actions.html.haml
@@ -19,3 +19,8 @@
             %p Badges
             .badge-admin-icon
             .carpet-down
+        %li
+          = link_to workshops_engine.workshops_path, id: 'admin-workshop-link' do
+            %p.admin-workshop-link Workshops
+            .workshop-admin-icon
+            .carpet-down
