active status added to workshops

--- a/app/views/shared/_workshop.html.haml
+++ b/app/views/shared/_workshop.html.haml
@@ -6,7 +6,8 @@
 .col-md-6.workshop-other-attrs
   %p
     Facilitator
-  = workshop.user.name
+  -if workshop.user
+    = workshop.user.name
 .col-md-6.workshop-other-attrs 
   %p
     Date
