Show dont tell module implemantation

--- a/app/assets/stylesheets/modules/admin.sass
+++ b/app/assets/stylesheets/modules/admin.sass
@@ -126,6 +126,7 @@
     .workshop
       left: 0px
   table
+    margin-bottom: 0
     tbody > tr > th
       background: $gray-lighter
       padding: 15px
@@ -141,7 +142,6 @@
 
 .admin-footer.badges-footer-separator
   background: $white
-  margin-top: -20px
   .users-footer-icon
     background: image_url('sprite-badges.png') -89px -720px no-repeat
     display: inline-block
