--- a/app/views/shared/_actions.html.haml
+++ b/app/views/shared/_actions.html.haml
@@ -24,3 +24,9 @@
             %p.admin-workshop-link Workshops
             .workshop-admin-icon
             .carpet-down
+        %li
+          = link_to show_dont_tells_engine.show_dont_tells_path,
+            id: 'admin-show-dont-tell-link', class: 'show-dont-tell-link' do
+            %p.admin-show-dont-tell-link Show don't tells
+            .workshop-admin-icon
+            .carpet-down    
