--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -40,11 +40,34 @@
         .workshops-header-decorator
     .row
       .workshops-all
-        = show_last_active_published__workshop
+        = show_last_active_published_workshop
     .row
       - if show_workshop_month
         %footer.workshops-footer
           %p
             Workshops from
             = show_workshop_month
+          .workshops-footer-icon
+  %section.workshops.col-md-9.module-separation
+    .row
+      %header.workshops-header-container
+        %h3.workshop-header
+          %span.workshop-header-image
+          %span.workshops-title Available Show don't tells
+        %ul.workshops-menu
+          %li
+            = link_to 'Active show don\'t tells', show_dont_tells_path(active: true),
+              class: 'badges-first-link'
+          %li.last
+            = link_to 'All show don\'t tells', show_dont_tells_path,
+              class: 'workshops-last-link'
+        .workshops-header-decorator
+    .row
+      .workshops-all
+        = show_last_active_show_dont_tell
+    .row
+      - if show_workshop_month
+        %footer.workshops-footer
+          %p
+            Show don't tells
           .workshops-footer-icon
