--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -48,26 +48,26 @@
             Workshops from
             = show_workshop_month
           .workshops-footer-icon
-  %section.workshops.col-md-9.module-separation
+  %section.show-dont-tells.col-md-9.module-separation
     .row
-      %header.workshops-header-container
-        %h3.workshop-header
-          %span.workshop-header-image
-          %span.workshops-title Available Show don't tells
-        %ul.workshops-menu
+      %header.show-dont-tells-header-container
+        %h3.show-dont-tell-header
+          %span.show-dont-tell-header-image
+          %span.show-dont-tells-title Available Show don't tells
+        %ul.show-dont-tells-menu
           %li
             = link_to 'Active show don\'t tells', show_dont_tells_path(active: true),
               class: 'badges-first-link'
           %li.last
             = link_to 'All show don\'t tells', show_dont_tells_path,
               class: 'workshops-last-link'
-        .workshops-header-decorator
+        .show-dont-tells-header-decorator
     .row
-      .workshops-all
+      .show-dont-tells-all
         = show_last_active_show_dont_tell
     .row
       - if show_workshop_month
-        %footer.workshops-footer
+        %footer.show-dont-tells-footer
           %p
             Show don't tells
-          .workshops-footer-icon
+          .show-dont-tells-footer-icon
