--- a/app/views/workshops/_workshop.html.haml
+++ b/app/views/workshops/_workshop.html.haml
@@ -2,7 +2,7 @@
   %td= workshop.title
   %td= workshop.user.name if workshop.user
   %td= workshop.date_and_time.to_formatted_s(:long) if workshop.date_and_time
-  %td= link_to 'More',  'javascript:void(0)', class: 'js-show-workshop-details'
+  %td= link_to 'More',  'javascript:void(0)', class: 'js-show-details'
 %tr.workshop-details
   = render partial: 'details', locals: { workshop: workshop }
 
