show dont tells flags updated

--- a/app/views/shared/_admin_footer.html.haml
+++ b/app/views/shared/_admin_footer.html.haml
@@ -12,4 +12,4 @@
       .workshops-footer-icon
     - elsif @show_dont_tells
       = pluralize(@show_dont_tells.size, 'show don\'t tell')
-      .workshops-footer-icon  
+      .show-dont-tells-footer-icon  
