format workshops email updated

--- a/app/views/workshop_notification_mailer/workshop_notification.html.haml
+++ b/app/views/workshop_notification_mailer/workshop_notification.html.haml
@@ -7,7 +7,7 @@
     %p
       The user
       = @user.name
-      has publish a new workshop
+      has published a new workshop
     %p
       You can check more information
-      = link_to 'here!', root_path
+      = link_to 'here!', root_url
