--- a/app/views/show_dont_tells_engine/show_dont_tells/_presentation_fields.html.haml
+++ b/app/views/show_dont_tells_engine/show_dont_tells/_presentation_fields.html.haml
@@ -3,7 +3,7 @@
     = f.input :title
   .field
     = f.input :user_id,
-              collection: User.all,
+              collection: User.ordered,
               value_method: :id,
               label_method: :name,
               prompt: 'Select a Facilitator',
