Add variables for color, font family and change date format show dont tell

--- a/app/assets/stylesheets/modules/show_dont_tells.sass
+++ b/app/assets/stylesheets/modules/show_dont_tells.sass
@@ -11,9 +11,9 @@
   position: initial
 
 .show-dont-tell-header
-  color: #aa392d
+  color: $carmin
   display: inline-block
-  font-family: 'Roboto'
+  font-family: $roboto
   font-size: 1.3em
   font-weight: 400
   margin: 15px
