--- a/app/assets/stylesheets/modules/workshops.sass
+++ b/app/assets/stylesheets/modules/workshops.sass
@@ -15,9 +15,9 @@
   position: initial
 
 .workshop-header
-  color: #aa392d
+  color: $carmin
   display: inline-block
-  font-family: 'Roboto'
+  font-family: $roboto
   font-size: 1.3em
   font-weight: 400
   margin: 15px
