fix active and innactive show dont tells render

--- a/app/views/show_dont_tells/_show_dont_tells_list.html.haml
+++ b/app/views/show_dont_tells/_show_dont_tells_list.html.haml
@@ -4,4 +4,4 @@
       %tr
         %th Date
         %th
-      = render partial: 'show_dont_tell', collection: @show_dont_tells
+      = render partial: 'show_dont_tell', collection: show_dont_tells
