remove unnecessary table-headers classes

--- a/app/assets/stylesheets/modules/show_dont_tells.sass
+++ b/app/assets/stylesheets/modules/show_dont_tells.sass
@@ -3,9 +3,6 @@
   font-size: 1em
   font-weight: 400
 
-.show-dont-tells-table-headers
-  margin-top: -1px
-
 .show-dont-tells
   background-color: $white
   position: initial
@@ -19,6 +16,7 @@
   margin: 15px
 
 .show-dont-tells-header-container
+  margin-bottom: 19px
   border-bottom: 1px solid $pink-50
   position: relative
 
