--- a/app/assets/stylesheets/modules/workshops.sass
+++ b/app/assets/stylesheets/modules/workshops.sass
@@ -7,9 +7,6 @@
   margin-bottom: 20px
   float: right
 
-.workshops-table-headers
-  margin-top: -1px
-
 .workshops
   background-color: $white
   position: initial
@@ -24,6 +21,7 @@
 
 .workshops-header-container
   border-bottom: 1px solid $pink-50
+  margin-bottom: 19px
   position: relative
 
 .workshops-header-decorator
