--- a/app/views/show_dont_tells_engine/show_dont_tells/_form.html.haml
+++ b/app/views/show_dont_tells_engine/show_dont_tells/_form.html.haml
@@ -12,7 +12,7 @@
                             {prompt: true,
                               discard_hour: true,
                               discard_minute: true},
-                            {class: 'show-dont-tell-full-width'}
+                            {class: 'show-dont-tell-full-width select-show-dont-tell'}
       .field
         = label_tag 'Presentations:'
         #presentations
