add styles and scripts for presentation modules

--- a/app/assets/stylesheets/modules/admin-show-dont-tell.sass
+++ b/app/assets/stylesheets/modules/admin-show-dont-tell.sass
@@ -4,10 +4,6 @@
 .show-dont-tell-link
   padding: 10px 3px !important
 
-.show-dont-tell-nested-fields
-  width: auto !important
-  height: auto !important
-
 .form-show-dont-tell
   background: $white
   margin-top: -19px
@@ -35,18 +31,14 @@
     border: 1px solid $gray-50
     color: $gray-dark
     font-family: roboto
-  .select-show-dont-tell
-    @extend .input-show-dont-tell
-    width: 175px
+    height: 34px
+    widht: 100%
   .textarea-show-dont-tell
     @extend .input-show-dont-tell
-    width: 100%
-  .button-show-dont-tell
-    background: transparent
-    border: 0
+    height: auto
   .show-dont-tell-full-width
     margin-bottom: 15px
-    width: 172px
+    width: 100%
 
 .show-dont-tell-details
   h5
