--- a/app/assets/stylesheets/modules/show_dont_tell.sass
+++ b/app/assets/stylesheets/modules/show_dont_tell.sass
@@ -2,11 +2,15 @@
   margin: 20px 20px 0 20px
   h5,p
     font-weight: bold
+  &:last-child
+    .show-dont-tell-title
+      border-bottom: none  
 .show-dont-tell-title
-  font-size: 18px !important
+  font-size: 16px !important
   border-bottom: 1px dashed $gray
   padding-bottom: 10px
   margin-bottom: 15px
+
 .show-dont-tell-other-attrs
   margin-top: 15px
   margin-bottom: 20px
