update views for new show dont tell structure

--- a/app/views/shared/_actions.html.haml
+++ b/app/views/shared/_actions.html.haml
@@ -25,7 +25,7 @@
             .workshop-admin-icon
             .carpet-down
         %li
-          = link_to show_dont_tells_engine.show_dont_tells_path,
+          = link_to presentations_engine.presentations_path,
             id: 'admin-show-dont-tell-link', class: 'show-dont-tell-link' do
             %p.admin-show-dont-tell-link Show don't tells
             .workshop-admin-icon
