--- a/app/views/shared/_admin_footer.html.haml
+++ b/app/views/shared/_admin_footer.html.haml
@@ -10,6 +10,6 @@
     - elsif @workshops
       = pluralize(@workshops.size, 'workshop')
       .workshops-footer-icon
-    - elsif @show_dont_tells
-      = pluralize(@show_dont_tells.size, 'show don\'t tell')
+    - elsif @presentations
+      = pluralize(@presentations.size, 'show don\'t tell presentation')
       .show-dont-tells-footer-icon  
