--- a/app/views/shared/_default_show_dont_tell_message.html.haml
+++ b/app/views/shared/_default_show_dont_tell_message.html.haml
@@ -1,1 +1,1 @@
-%p.badges-default-message There are no available show don't tells... yet!
+%p.badges-default-message There are no available presentations... yet!
