--- a/app/views/shared/_user.html.haml
+++ b/app/views/shared/_user.html.haml
@@ -6,7 +6,8 @@
   %td= user.position
   %td
     = link_to 'Edit', edit_user_path(user), class: 'action-control-section'
-    |
-    = link_to 'Delete', user_path(user), method: :delete,
-                                         confirm: "Are you sure?",
-                                         class: 'action-control-section'
+    - if current_user.is_admin?
+      |
+      = link_to 'Delete', user_path(user), method: :delete,
+                                           confirm: "Are you sure?",
+                                           class: 'action-control-section'
