--- a/app/assets/stylesheets/modules/show_dont_tells.sass
+++ b/app/assets/stylesheets/modules/show_dont_tells.sass
@@ -24,21 +24,20 @@
   background: image_url('sprite-badges.png') -165px -805px no-repeat
   height: 45px
   position: absolute
-  top: 15px
   right: -9px
+  top: 15px
   width: 25px
 
 .show-dont-tell-header-image
-  background: image_url('sprite-badges.png') -96px -517px 
-  no-repeat
+  background: image_url('sprite-badges.png') -96px -517px no-repeat
   display: inline-block
   height: 50px
   width: 50px
 
 .show-dont-tells-title
+  font-size: 1em
   padding: 15px
   vertical-align: 16px
-  font-size: 1em
 
 .show-dont-tells-menu
   float: right
@@ -82,8 +81,8 @@
 .show-dont-tells-footer-icon
   background: image_url('sprite-badges.png') -209px -720px no-repeat
   display: inline-block
-  position: absolute
-  width: 55px
   height: 60px
-  top: -4px
+  position: absolute
   right: -9px
+  top: -4px
+  width: 55px
