--- a/app/views/presentations_engine/presentations/_details.html.haml
+++ b/app/views/presentations_engine/presentations/_details.html.haml
@@ -2,8 +2,8 @@
   .row
     .col-md-1
       .span1
-    .col-md-10
-      .span10
+    .col-md-10.details
+      .span10.details
         .row
           .col-md-8
             %h2= presentation.title
