--- a/app/views/shared/_presentation.html.haml
+++ b/app/views/shared/_presentation.html.haml
@@ -1,3 +1,3 @@
 .show-dont-tell-container  
   .show-dont-tell-title
-    = presentation.title + ' by: '+ presentation.user.name if presentation.user
+    = "#{presentation.title} by: #{ presentation.user.name }" if presentation.user
