--- a/app/views/presentations/_details.html.haml
+++ b/app/views/presentations/_details.html.haml
@@ -3,7 +3,7 @@
     .col-md-1
       .span1
     .col-md-10
-      .span10
+      .span10.details
         .row
           .col-md-8
             %h2= presentation.title
