--- a/app/views/presentations/_details.html.haml
+++ b/app/views/presentations/_details.html.haml
@@ -5,7 +5,7 @@
     .col-md-10
       .span10.details
         .row
-          .col-md-8
+          .col-md-8.details
             %h2= presentation.title
           .col-md-4
             .action-show-details
