--- a/app/views/presentations/_details.html.haml
+++ b/app/views/presentations/_details.html.haml
@@ -3,9 +3,9 @@
     .col-md-1
       .span1
     .col-md-10
-      .span10.details
+      .span10
         .row
-          .col-md-8.details
+          .col-md-8
             %h2= presentation.title
           .col-md-4
             .action-show-details
@@ -18,6 +18,6 @@
           = presentation.description   
         %section
           %h5 Date:
-          = presentation.date.to_formatted_s(:long) if presentation.date     
+          = show_presentation_date(presentation.date)     
     .col-md-1
       .span1
