--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -53,7 +53,7 @@
       %header.show-dont-tells-header-container
         %h3.show-dont-tell-header
           %span.show-dont-tell-header-image
-          %span.show-dont-tells-title On next Show don't tell
+          %span.show-dont-tells-title On the next Show don't tell
         %ul.show-dont-tells-menu
           %li
             = link_to 'Active show don\'t tell presentations', presentations_path(active: true),
