Update home style

--- a/app/assets/stylesheets/modules/badges.sass
+++ b/app/assets/stylesheets/modules/badges.sass
@@ -57,10 +57,14 @@
 
 .badges-all
   border-top: 1px solid $white
+  min-height: 50px
   overflow: auto
 
 .badges-default-message
+  color: $gray-light
+  font-weight: bold
   margin-left: 14px
+  margin-top: 14px
 
 .badges-footer
   background: image_url('sprite-badges.png') -15px -650px no-repeat
