--- a/app/assets/stylesheets/modules/workshops.sass
+++ b/app/assets/stylesheets/modules/workshops.sass
@@ -21,7 +21,6 @@
 
 .workshops-header-container
   border-bottom: 1px solid $pink-50
-  margin-bottom: 19px
   position: relative
 
 .workshops-header-decorator
@@ -58,12 +57,16 @@
 .workshop-last-link
   +workshops_links($blue-light)
 
-.workshop-all
+.workshops-all
   border-top: 1px solid $white
+  min-height: 50px
   overflow: auto
 
-.workshop-default-message
+.workshops-default-message
+  color: $gray-light
+  font-weight: bold
   margin-left: 14px
+  margin-top: 14px
 
 .workshops-footer
   border-top: 1px solid $pink-50
