--- a/app/views/shared/_default_workshop_message.html.haml
+++ b/app/views/shared/_default_workshop_message.html.haml
@@ -1,1 +1,1 @@
-%p.badges-default-message There are no available workshops... yet!
+%p.workshops-default-message There are no available workshops... yet!
