--- a/app/assets/stylesheets/modules/show_dont_tells.sass
+++ b/app/assets/stylesheets/modules/show_dont_tells.sass
@@ -16,7 +16,6 @@
   margin: 15px
 
 .show-dont-tells-header-container
-  margin-bottom: 19px
   border-bottom: 1px solid $pink-50
   position: relative
 
@@ -53,12 +52,16 @@
 .show-dont-tell-last-link
   +show_dont_tells_links($blue-light)
 
-.show-dont-tell-all
+.show-dont-tells-all
   border-top: 1px solid $white
+  min-height: 50px
   overflow: auto
 
 .show-dont-tell-default-message
+  color: $gray-light
+  font-weight: bold
   margin-left: 14px
+  margin-top: 14px
 
 .show-dont-tells-footer
   border-top: 1px solid $pink-50
