--- a/app/views/workshop_notification_mailer/workshop_notification.html.haml
+++ b/app/views/workshop_notification_mailer/workshop_notification.html.haml
@@ -5,9 +5,8 @@
     %title A new workshop was published!
   %body
     %p
-      The user
-      = @user.name
-      has published a new workshop
+      = @workshop.title
+      workshop is now available.
     %p
       You can check more information
       = link_to 'here!', root_url
