--- a/app/views/shared/_actions.html.haml
+++ b/app/views/shared/_actions.html.haml
@@ -23,7 +23,7 @@
               .carpet-down
         - if current_user.roles.include?(workshops_admin) or current_user.is_admin
           %li
-            = link_to workshops_engine.workshops_path, id: 'admin-workshop-link' do
+            = link_to workshops_path, id: 'admin-workshop-link' do
               %p.admin-workshop-link Workshops
               .workshop-admin-icon
               .carpet-down
