[WIP] Move more workshop specific code to engine

--- a/app/assets/stylesheets/engines/workshops.sass
+++ b/app/assets/stylesheets/engines/workshops.sass
@@ -3,4 +3,4 @@
 
 @import 'workshops_engine/workshop'
 @import 'workshops_engine/workshops'
-@import 'workshops_engine/admin/admin-workshops.css'
+@import 'workshops_engine/admin/admin-workshop'
