--- a/app/assets/stylesheets/modules/show_dont_tells.sass
+++ b/app/assets/stylesheets/modules/show_dont_tells.sass
@@ -81,7 +81,7 @@
   @extend .show-dont-tells-footer
   margin-bottom: 30px
 
-.show-dont-tells-footer-icon
+.show-dont-tells-footer-icon, .presentations-footer-icon
   background: image_url('sprite-badges.png') -209px -720px no-repeat
   display: inline-block
   height: 60px
