--- a/app/views/shared/_admin_footer.html.haml
+++ b/app/views/shared/_admin_footer.html.haml
@@ -1,15 +1,6 @@
 %footer.admin-footer.badges-footer-separator
   %p
     Total
-    - if @users
-      = pluralize(@users.size, 'user')
-      .users-footer-icon
-    - elsif @badges
-      = pluralize(@badges.size, 'badge')
-      .badges-footer-icon
-    - elsif @workshops
-      = pluralize(@workshops.size, 'workshop')
-      .workshops-footer-icon
-    - elsif @presentations
-      = pluralize(@presentations.size, 'show don\'t tell presentation')
-      .show-dont-tells-footer-icon  
+    - resource = params[:controller].split('/').last
+    = pluralize(instance_variable_get("@#{resource}").size, resource)
+    %div{ :class => "#{resource}-footer-icon" }
