--- a/app/views/presentations/index.html.haml
+++ b/app/views/presentations/index.html.haml
@@ -7,13 +7,12 @@
           %span.show-dont-tells-title All Show don't tells
         %ul.show-dont-tells-menu
           %li.last
-            = link_to 'Back to my Dashboard', user_path(current_user),
-              class: 'workshops-last-link'
+            = link_to 'Back to my Dashboard', user_path(current_user)
           .show-dont-tells-header-decorator
         = render partial: 'search', locals: { presentations: @presentations }
         = render partial: 'filter', locals: { presentations: @presentations }
       %section
-        .workshops-all
+        .section-content-wrapper
           = show_presentations(params[:active])
       %footer.show-dont-tells-footer-separator
         %p
