--- a/app/views/shared/_actions.html.haml
+++ b/app/views/shared/_actions.html.haml
@@ -21,12 +21,8 @@
               %p Badges
               .badge-admin-icon
               .carpet-down
-        - if current_user.roles.include?(workshops_admin) or current_user.is_admin
-          %li
-            = link_to workshops_path, id: 'admin-workshop-link' do
-              %p.admin-workshop-link Workshops
-              .workshop-admin-icon
-              .carpet-down
+        - Rails.application.config.engines_list.uniq.each do |engine|
+          = render partial: "#{engine.underscore}/shared/#{engine.underscore}_admin_action"# rescue nil
         - if current_user.roles.include?(presentations_admin) or current_user.is_admin
           %li
             = link_to presentations_engine.presentations_path,
