--- a/app/views/users/_widgets.html.haml
+++ b/app/views/users/_widgets.html.haml
@@ -1,2 +1,2 @@
 - Rails.application.config.engines_list.uniq.each do |engine|
-  = render partial: "#{engine.underscore}/users/#{engine.underscore}_widget"# rescue nil
+  = render partial: "#{engine.underscore}/users/#{engine.underscore}_section_widget" rescue nil
