--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -5,7 +5,7 @@
   %body
     #wrapper
       .header-default
-        = link_to '', admin_users_path, class: 'circle'
+        = link_to '', main_app.admin_users_path, class: 'circle'
         .header-vertical-line
         .container
           = yield :user_details
