--- a/app/views/layouts/dashboards.html.haml
+++ b/app/views/layouts/dashboards.html.haml
@@ -6,7 +6,7 @@
     #wrapper
       .header-dashboards
         .header-vertical-line
-        =link_to '', user_path(current_user), class: 'circle'
+        =link_to '', main_app.user_path(current_user), class: 'circle'
         .welcome-image
       = render 'shared/flash_message'
       #content
