Add new show dont tell icon

--- a/app/assets/stylesheets/modules/show_dont_tells.sass
+++ b/app/assets/stylesheets/modules/show_dont_tells.sass
@@ -20,7 +20,7 @@
   position: relative
 
 .show-dont-tells-header-decorator
-  background: image_url('sprite-badges.png') -165px -805px no-repeat
+  background: image_url('sprite-badges.png') -282px -805px no-repeat
   height: 45px
   position: absolute
   right: -9px
@@ -28,7 +28,7 @@
   width: 25px
 
 .show-dont-tell-header-image
-  background: image_url('sprite-badges.png') -96px -517px no-repeat
+  background: image_url('sprite-badges.png') -161px -584px no-repeat
   display: inline-block
   height: 50px
   width: 50px
@@ -50,7 +50,7 @@
       padding-right: 0px
 
 .show-dont-tell-last-link
-  +show_dont_tells_links($blue-light)
+  +show_dont_tells_links(#eed36e)
 
 .show-dont-tells-all
   border-top: 1px solid $white
@@ -82,7 +82,7 @@
   margin-bottom: 30px
 
 .show-dont-tells-footer-icon, .presentations-footer-icon
-  background: image_url('sprite-badges.png') -209px -720px no-repeat
+  background: image_url('sprite-badges.png') -328px -720px no-repeat
   display: inline-block
   height: 60px
   position: absolute
