--- a/app/views/shared/_actions.html.haml
+++ b/app/views/shared/_actions.html.haml
@@ -28,5 +28,5 @@
             = link_to presentations_engine.presentations_path,
               id: 'admin-show-dont-tell-link', class: 'show-dont-tell-link' do
               %p.admin-show-dont-tell-link Show don't tells
-              .workshop-admin-icon
+              .presentation-admin-icon
               .carpet-down
