--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -38,7 +38,7 @@
             = link_to 'Active show don\'t tell presentations', presentations_path(active: true),
               class: 'badges-first-link'
           %li.last
-            = link_to 'All show don\'t tell presentations', presentations_path
+            = link_to 'All show don\'t tell presentations', presentations_path, class: 'show-dont-tell-last-link'
         .show-dont-tells-header-decorator
     .row
       .show-dont-tells-all
