Change the way skills view in edit user

--- a/app/assets/stylesheets/modules/user-edit.sass
+++ b/app/assets/stylesheets/modules/user-edit.sass
@@ -8,6 +8,9 @@
   label
     margin-left: 27px
     margin-bottom: 10px
+    display: block
+    float: left
+    width: 25%
 
 .edit-user-info
   background: $white
