--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,5 +1,6 @@
 /*
  *= require main_app
+ *= require lib/jquery-ui-1.10.0.custom
  *= require bootstrap-datepicker
  *= require_tree ./engines
  */
