Change vote relation and rename attributes

--- a/app/views/badges/show.html.haml
+++ b/app/views/badges/show.html.haml
@@ -31,7 +31,7 @@
               class: 'search-proposals-nominate'
             = link_to 'Propose a badge', '#',
               class: 'search-proposals-propose'
-            = link_to 'Vote MVP', votations_path,
+            = link_to 'Vote MVP', vote_events_path,
               class: 'search-proposals-mvp'
       = render partial: 'shared/nominee_user'
       = render partial: 'shared/propose_badge'
