Add logic to add candidates to terna in admin

--- a/app/assets/stylesheets/modules/admin-badge.sass
+++ b/app/assets/stylesheets/modules/admin-badge.sass
@@ -126,6 +126,8 @@
       color: $gray-dark
       font-family: roboto
       width: 175px
+    .checkbox-candidate
+      width: 20px
     select
       @extend input
       width: 175px
